fix(api): 회원 탈퇴시 연관관계 정리 · 멤버 역할 통합 (#716) (#743)
* chore(api): bruno formatting

* chore(api): ddl-auto를 validate로 전환

* feat(api): 엔티티 생성시 회원 존재여부 검증 추가

* feat(api): 회원 탈퇴시 연관 데이터 정리

* feat(api): 탈퇴 회원을 나타내는 WITHDRAWN 상수 도입

* refactor(api): 회원 역할 WORKER · CONTRACTOR를 USER로 통합

* refactor(api): attachment 인터페이스 도입

* refactor: MemberCleaner → DriveService 의존성 제거

* docs(api): generate open api document

---------
