# apps/api/src/main/java/to/bconnect/api/storage/profile/ProfileRole.java
@@ -1,6 +1,7 @@
 package to.bconnect.api.storage.profile;
 
 public enum ProfileRole {
+    CONTRACTOR,
     CLIENT,
     ARCHITECT,
     FOREMAN,
